--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,6 +42,31 @@ h2
 }
 
 
+/* #################### */
+/* # homepage section # */
+/* #################### */
+
+#homepage #content
+{
+	padding: 10px;
+}
+
+#homepage #content .ui.header:first-child
+{
+	padding-top: 0;
+}
+
+#homepage #content .ui.header
+{
+	padding-top: 14px;
+}
+
+#homepage #content table td.small
+{
+	width: 30px;
+}
+
+
 /* ##################### */
 /* # container section # */
 /* ##################### */
@@ -95,7 +120,7 @@ h2
 {
 	width: 16px;
 	height: 16px;
-	padding: 3px;
+	padding: 4px;
 }
 
 #content table .icon.first
@@ -217,6 +242,21 @@ h2
 	font-size: 12px;
 }
 
+
+/* #################### */
+/* # calendar section # */
+/* #################### */
+
+.calendar
+{
+	font-family: Verdana, sans-serif;
+	font-size: 10px!important;
+}
+
+.calendar td
+{
+	padding: 2px!important;
+}
 
 
 /* ######################## */
@@ -345,3 +385,21 @@ pre code.hljs.php .ui.label
 {
 	text-align: justify;
 }
+
+.underline
+{
+	text-decoration: underline;
+}
+
+.small-font
+{
+	font-size: 12px;
+}
+
+.text-break
+{
+	word-break: break-all;
+}
+
+.icon.edit   { color: #000; opacity: 1; font-size: 1.1em; }
+.icon.remove { color: #000; opacity: 1; font-size: 1.1em; }
