--- a/src/css/style.css
+++ b/src/css/style.css
@@ -247,15 +247,89 @@ h2
 /* # calendar section # */
 /* #################### */
 
-.calendar
-{
-	font-family: Verdana, sans-serif;
-	font-size: 10px!important;
+/*.calendar*/
+/*{*/
+	/*font-family: Verdana, sans-serif;*/
+	/*font-size: 10px!important;*/
+/*}*/
+
+/*.calendar td*/
+/*{*/
+	/*padding: 2px!important;*/
+/*}*/
+.ui.dimmer {
+	position: fixed;
+}
+.ui.scrolling.dimmable > .dimmer,
+.ui.scrolling.page.dimmer {
+	position: fixed; /*absolute*/
+}
+/* Bound to segment size*/
+.ui.segment > .ui.dimmer {
+	position:absolute;
 }
 
-.calendar td
+
+#calendar table
 {
-	padding: 2px!important;
+	font-size: 8pt;
+	border-collapse: collapse;
+}
+
+#calendar table th
+{
+	text-align: center;
+}
+
+#calendar table th:first-child
+{
+	width: 20px;
+}
+
+#calendar table .inline.field
+{
+	margin: 0;
+}
+
+#calendar table tr,
+#calendar table td,
+#calendar table th
+{
+	border: 1px rgb(92, 92, 92) solid;
+}
+
+#calendar table tr:first-child th
+#calendar table tr:first-child td
+#calendar table tr:first-child + tr td
+{
+	height: 31px!important;
+}
+
+#calendar table td
+{
+	height: 20px;
+}
+
+#calendar table td
+{
+	width: 19px;
+	min-width: 19px;
+
+	text-align: center;
+	font-family: 'Arial', serif;
+	padding: 0;
+}
+
+#calendar table input
+{
+	margin: 0;
+	text-align: center;
+	border-radius: 0!important;
+	font-size: 8px!important;
+	padding: 0!important;
+	border: none!important;
+	width: 100%;
+	height: 18px;
 }
 
 
