--- a/src/css/report.css
+++ b/src/css/report.css
@@ -122,7 +122,7 @@ table
 
 	font-size: 9pt;
 
-	width: 26cm;
+	width: 100%;
 
 	float: left;
 }
@@ -194,6 +194,11 @@ table
 	display: inline-block;
 	text-align: center;
 	margin-right: 3px;
+}
+
+#calendar th.total
+{
+	padding: 0 2px;
 }
 
 
