sortable categories added

--- a/src/css/report.css
+++ b/src/css/report.css
@@ -59,23 +59,23 @@ table
 	text-align: center;
 }
 
-.rotate-90
-{
-	-moz-transform:    rotate(90deg); /* firefox            */
-	transform:         rotate(90deg); /* generic            */
-	-webkit-transform: rotate(90deg); /* safari, chrome etc */
-	-ms-transform:     rotate(90deg); /* ie8+               */
-	-o-transform:      rotate(90deg); /* opera              */
-}
+/*.rotate-90*/
+/*{*/
+	/*-moz-transform:    rotate(90deg); *//* firefox            */
+	/*transform:         rotate(90deg); *//* generic            */
+	/*-webkit-transform: rotate(90deg); *//* safari, chrome etc */
+	/*-ms-transform:     rotate(90deg); *//* ie8+               */
+	/*-o-transform:      rotate(90deg); *//* opera              */
+/*}*/
 
-.rotate-270
-{
-	-moz-transform:    rotate(270deg); /* firefox            */
-	transform:         rotate(270deg); /* generic            */
-	-webkit-transform: rotate(270deg); /* safari, chrome etc */
-	-ms-transform:     rotate(270deg); /* ie8+               */
-	-o-transform:      rotate(270deg); /* opera              */
-}
+/*.rotate-270*/
+/*{*/
+	/*-moz-transform:    rotate(270deg); *//* firefox            */
+	/*transform:         rotate(270deg); *//* generic            */
+	/*-webkit-transform: rotate(270deg); *//* safari, chrome etc */
+	/*-ms-transform:     rotate(270deg); *//* ie8+               */
+	/*-o-transform:      rotate(270deg); *//* opera              */
+/*}*/
 
 
 #header
@@ -225,4 +225,44 @@ table
 	border: 1px rgb(92, 92, 92) solid;
 
 	text-align: center;
+}
+
+/*#plan .rotate-270*/
+/*{*/
+	/*overflow: visible;*/
+
+	/*transform:         rotate(270deg);*/
+	/*-ms-transform:     rotate(270deg);*/
+	/*-moz-transform:    rotate(270deg);*/
+	/*-o-transform:      rotate(270deg);*/
+	/*-webkit-transform: rotate(270deg);*/
+
+	/*-moz-rotation-point:    0 0;*/
+	/*-webkit-rotation-point: 0 0;*/
+
+	/*-ms-writing-mode: tb-lr;*/
+/*}*/
+
+
+#plan .rotate-box
+{
+	width: 0.5cm;
+	max-width: 0.5cm;
+	height: 4.9cm;
+	overflow: visible;
+	position: relative;
+}
+
+#plan .rotate-box.medium
+{
+	height: 4.0cm!important;
+}
+
+#plan .rotate-box .rotate-270
+{
+	width: 5.55cm;
+	text-align: left;
+	bottom: 2.75cm;
+	position: absolute;
+	left: -2.52cm;
 }
