--- a/src/css/style.css
+++ b/src/css/style.css
@@ -395,6 +395,75 @@ pre code.hljs.php .ui.label
 }
 
 
+
+
+/* ################## */
+/* # dimmer section # */
+/* ################## */
+
+#dimmer .icon
+{
+	font-size: 4em;
+}
+
+
+
+/* ##################### */
+/* # edication section # */
+/* ##################### */
+
+#education-list
+{
+	padding-bottom: 1em;
+}
+
+#education ul
+{
+	padding: 3px 5px;
+}
+
+#education-list li
+{
+	list-style: none;
+	border: 1px solid #CCC;
+	background: #F6F6F6;
+	margin: 2px 0;
+	border-radius: 0;
+	padding: 7px;
+	/*width: 100%;*/
+	cursor: pointer;
+}
+
+#education-list li .icon.right.delete
+{
+	float: right;
+}
+
+#education-list li .icon.triangle
+{
+	margin: 0 -4px 0 0;
+	font-size: 10px;
+	padding-right: 10px;
+	width: 18px;
+}
+
+#education-list li.sortable-placeholder
+{
+	border: 1px dashed #CCC;
+	background: none;
+	height: 15px;
+}
+
+#education-list li .tip
+{
+	border-top:  1px dashed rgba(200, 200, 200, 0.521569);
+	padding-top: 6px;
+	margin-top: 6px;
+	word-wrap: break-word;
+}
+
+
+
 /* ########################## */
 /* # global classes section # */
 /* ########################## */
