--- a/src/css/style.css
+++ b/src/css/style.css
@@ -511,6 +511,26 @@ pre code.hljs.php .ui.label
 	word-wrap: break-word;
 }
 
+#education-list .actions .ui.button
+{
+	height: 23px;
+	border-radius: 0;
+	margin-top: -4px;
+	padding-top: 6px;
+	margin-left: 9px;
+	width: 18%;
+	float: right;
+}
+
+#education-list .disciplines
+{
+	margin-bottom: 1em;
+}
+
+#education-list .disciplines:last-child
+{
+	margin-bottom: 0;
+}
 
 
 /* ########################## */
