--- a/src/css/style.css
+++ b/src/css/style.css
@@ -533,6 +533,100 @@ pre code.hljs.php .ui.label
 }
 
 
+/* ######################## */
+/* # filler modal section # */
+/* ######################## */
+
+#filler-modal
+{
+	width: 78%!important;
+	margin-left: -39%!important;
+}
+
+#filler-modal .input
+{
+	padding: 0;
+}
+
+#filler-modal .input .field
+{
+	margin: 0;
+}
+
+#filler-modal .input .field input
+{
+	font-size: 12px;
+	text-align: center;
+	padding: 0;
+	height: 36px;
+	margin: 0;
+	border-radius: 0!important;
+	border: none!important;
+	width: 100%;
+	min-width: 25px;
+	background: rgba(108, 161, 102, 0.16);
+}
+
+#filler-modal tr.result td.empty
+{
+	color: gray;
+}
+
+#filler-modal tr.result td.non-empty
+{
+	font-weight: bold;
+}
+
+#filler-modal .plan th,
+#filler-modal .plan td
+{
+	font-size: 8pt;
+
+	border: 1px rgb(92, 92, 92) solid;
+
+	text-align: center;
+}
+
+/*#filler-modal .plan .rotate-270*/
+/*{*/
+	/*overflow: visible;*/
+
+	/*transform:         rotate(270deg);*/
+	/*-ms-transform:     rotate(270deg);*/
+	/*-moz-transform:    rotate(270deg);*/
+	/*-o-transform:      rotate(270deg);*/
+	/*-webkit-transform: rotate(270deg);*/
+
+	/*-moz-rotation-point:    0 0;*/
+	/*-webkit-rotation-point: 0 0;*/
+
+	/*-ms-writing-mode: tb-lr;*/
+/*}*/
+
+#filler-modal .plan .rotate-box
+{
+	width: 0.5cm;
+	max-width: 0.5cm;
+	height: 5.9cm;
+	overflow: visible;
+	position: relative;
+}
+
+#filler-modal .plan .rotate-box.medium
+{
+	height: 4.0cm!important;
+}
+
+#filler-modal .plan .rotate-box .rotate-270
+{
+	width: 5.55cm;
+	text-align: left;
+	bottom: 2.75cm;
+	position: absolute;
+	left: -2.52cm;
+}
+
+
 /* ########################## */
 /* # global classes section # */
 /* ########################## */
