--- a/src/css/report.css
+++ b/src/css/report.css
@@ -266,3 +266,20 @@ table
 	position: absolute;
 	left: -2.52cm;
 }
+
+#plan .names
+{
+	width: 7cm;
+}
+
+#plan .small
+{
+	width: 1cm;
+}
+
+
+
+.text-left
+{
+	text-align: left!important;
+}
