--- a/src/css/report.css
+++ b/src/css/report.css
@@ -33,7 +33,6 @@ body
 .paper .page-break
 {
 	page-break-before: always;
-	/*page-break-before: always;*/
 }
 
 .paper .footer-small
@@ -64,16 +63,6 @@ body
 table
 {
 	font-size: 11pt;
-
-	/*border-collapse: collapse;*/
-	/*margin-bottom:   5px;*/
-
-	/*display:         table;*/
-	/*border-spacing:  2px;*/
-	/*border-color:    gray;*/
-
-	/*float:           left;*/
-	/*margin-right:    5px;*/
 }
 
 .underline
@@ -90,24 +79,6 @@ table
 {
 	text-align: center;
 }
-
-/*.rotate-90*/
-/*{*/
-	/*-moz-transform:    rotate(90deg); *//* firefox            */
-	/*transform:         rotate(90deg); *//* generic            */
-	/*-webkit-transform: rotate(90deg); *//* safari, chrome etc */
-	/*-ms-transform:     rotate(90deg); *//* ie8+               */
-	/*-o-transform:      rotate(90deg); *//* opera              */
-/*}*/
-
-/*.rotate-270*/
-/*{*/
-	/*-moz-transform:    rotate(270deg); *//* firefox            */
-	/*transform:         rotate(270deg); *//* generic            */
-	/*-webkit-transform: rotate(270deg); *//* safari, chrome etc */
-	/*-ms-transform:     rotate(270deg); *//* ie8+               */
-	/*-o-transform:      rotate(270deg); *//* opera              */
-/*}*/
 
 
 #header
@@ -251,7 +222,8 @@ table
 
 
 .plan,
-.summary
+.summary,
+.optional
 {
 	width: 100%;
 
@@ -263,7 +235,9 @@ table
 .plan th,
 .plan td,
 .summary th,
-.summary td
+.summary td,
+.optional th,
+.optional td
 {
 	font-size: 8pt;
 
@@ -273,23 +247,6 @@ table
 
 	width: 0.7cm;
 }
-
-/*.plan .rotate-270*/
-/*{*/
-	/*overflow: visible;*/
-
-	/*transform:         rotate(270deg);*/
-	/*-ms-transform:     rotate(270deg);*/
-	/*-moz-transform:    rotate(270deg);*/
-	/*-o-transform:      rotate(270deg);*/
-	/*-webkit-transform: rotate(270deg);*/
-
-	/*-moz-rotation-point:    0 0;*/
-	/*-webkit-rotation-point: 0 0;*/
-
-	/*-ms-writing-mode: tb-lr;*/
-/*}*/
-
 
 .plan    .rotate-box,
 .summary .rotate-box
@@ -329,6 +286,36 @@ table
 	width: 1cm;
 }
 
+.plan .borders th,
+.plan .borders td,
+.summary .borders th,
+.summary .borders td
+{
+	border-top: 2px black solid;
+	border-bottom: 2px black solid;
+}
+
+.summary tbody tr td:nth-child(2)
+{
+	padding-left: 0.1cm;
+}
+
+.optionals
+{
+	display: inline-block;
+}
+
+.optional
+{
+	margin-top: 0;
+
+	float: left;
+}
+
+.optional tbody tr:first-child td
+{
+	height: 0.9cm;
+}
 
 #footer .notes
 {
@@ -389,4 +376,19 @@ table
 	white-space: nowrap;
 }
 
+.bold
+{
+	font-weight: bold;
+}
 
+
+.width-2  { width: 2%!important;  }
+.width-5  { width: 5%!important;  }
+.width-10 { width: 10%!important; }
+.width-15 { width: 15%!important; }
+.width-20 { width: 20%!important; }
+.width-30 { width: 30%!important; }
+.width-33 { width: 33%!important; }
+.width-40 { width: 40%!important; }
+.width-50 { width: 50%!important; }
+.width-60 { width: 60%!important; }
