--- a/src/css/style.css
+++ b/src/css/style.css
@@ -228,6 +228,12 @@ h2
 	right: 13px;
 }
 
+.content-reports i.icon.remove
+{
+	font-size: 1em;
+	margin-left: 5px;
+}
+
 #reports-new
 {
 
@@ -525,7 +531,6 @@ pre code.hljs.php .ui.label
 
 #education-list li .tip
 {
-	border-top:  1px dashed rgba(200, 200, 200, 0.521569);
 	padding-top: 6px;
 	margin-top: 6px;
 	word-wrap: break-word;
@@ -587,6 +592,13 @@ pre code.hljs.php .ui.label
 	background: rgba(108, 161, 102, 0.16);
 }
 
+#filler-modal tr.item-row td:nth-child(2)
+{
+	text-align: left;
+
+	padding: 5px;
+}
+
 #filler-modal tr.result td.empty
 {
 	color: gray;
@@ -600,10 +612,8 @@ pre code.hljs.php .ui.label
 #filler-modal .plan th,
 #filler-modal .plan td
 {
-	font-size: 8pt;
-
-	border: 1px rgb(92, 92, 92) solid;
-
+	font-size: 8pt!important;
+	border: 1px rgba(92, 92, 92, 0.35) solid;
 	text-align: center;
 }
 
